# bgk.old.old

./: Cargo.toml
src/: error.rs  game.rs  lib.rs  main.rs  score_keeper_error.rs  ten_pin_error.rs  ten_pin_game.rs  unit_tests.rs
src/consts/: en_us.rs
src/game/: error.rs  mod.rs
src/roll_amt/: error.rs  mod.rs  unit_tests.rs
src/score/: mod.rs
src/score/ten_pin_score/: error.rs  mod.rs
src/score/ten_pin_score/unit_tests/: mod.rs
src/unit_tests/: mocks.rs  mod.rs
src/unit_tests/game/: mod.rs  roll.rs  rolls.rs  score.rs
src/unit_tests/ten_pin_game/: rolls.rs  score.rs
