[package]
authors = ["Brad Gibson <b2b@humanenginuity.com>"]
name = "bgk_2018_03"
version = "0.1.0"

[[bin]]
doc = false
name = "bgk_2018_03"
path = "src/main.rs"
test = false

[dependencies]
failure = "0.1.1"
num-traits = "0.2.4"

[dependencies.clippy]
optional = true
version = "0.0.196"

[dependencies.hesl]
git = "ssh://git@github.com/humanenginuity/hesl"

[dev-dependencies]
rspec = "1.0.0-beta.4"

[lib]
name = "bgk_2018_03"
path = "src/lib.rs"
[profile.bench]
codegen-units = 1
debug = false
debug-assertions = false
lto = true
opt-level = 3
rpath = false

[profile.dev]
codegen-units = 1
debug = true
debug-assertions = true
lto = false
opt-level = 0
panic = "unwind"
rpath = false

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = true
opt-level = 3
panic = "unwind"
rpath = false

[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
lto = false
opt-level = 0
rpath = false
